// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Bar Component It displays "Close Popup" on center button Tests displayCard: true, displayRandomize: false, echo: false 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Close Popup
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Close Popup" on center button Tests displayCard: true, displayRandomize: false, echo: true 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Close Popup
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Close Popup" on center button Tests displayCard: true, displayRandomize: true, echo: false 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Close Popup
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Close Popup" on center button Tests displayCard: true, displayRandomize: true, echo: true 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Close Popup
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Randomize" on center button Tests displayCard: false, displayRandomize: false, echo: false 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Randomize
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Randomize" on center button Tests displayCard: false, displayRandomize: false, echo: true 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Randomize
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Show Popup" on center button Tests displayCard: false, displayRandomize: true, echo: false 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Show Popup
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;

exports[`Testing Bar Component It displays "Show Popup" on center button Tests displayCard: false, displayRandomize: true, echo: true 1`] = `
<div
  className="nav"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#466370",
      "display": "flex",
      "flexWrap": "nowrap",
      "height": 50,
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "fixed",
      "top": 0,
      "width": "calc(100% - 20px)",
    }
  }
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Hide Echoes
  </button>
  <button
    data-test="centerBtn"
    onClick={[Function]}
    style={
      Object {
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Show Popup
  </button>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ddddddb3",
        "border": "2px solid",
        "borderRadius": "5px",
        "fontSize": "15px",
        "fontWeight": 700,
        "height": "50px",
        "justifyContent": "center",
        "letterSpacing": "1px",
        "textAlign": "center",
        "textTransform": "uppercase",
        "width": "100%",
      }
    }
    type="button"
  >
    Save Chars
  </button>
</div>
`;
